fix contact links on mobile

--- a/main.css
+++ b/main.css
@@ -442,6 +442,12 @@ footer .footer-text {
 
 /* Large Desktops (md, lg) */
 @media only screen and (max-width: 1199px) {
+    /* iPhone X+ landscape */
+    /*noinspection ALL*/
+    body {
+        padding-bottom: env(safe-area-inset-bottom);
+    }
+
     .container-constrained {
         max-width: 60%;
     }
@@ -465,6 +471,11 @@ footer .footer-text {
 @media only screen and (max-width: 767px) {
 
     /* iPhone X+ landscape */
+    /*noinspection ALL*/
+    body {
+        padding-bottom: env(safe-area-inset-bottom);
+    }
+
     /* noinspection ALL */
     .page, .section {
         padding-left: env(safe-area-inset-left);
